// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > core > hocs > withForwardedRef should inject the ref with a custom prop name 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"className":"foo","children":"Testing 123","custom":{"current":null}}
</pre>
`;

exports[`engage > core > hocs > withForwardedRef should render 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"className":"foo","children":"Testing 123","forwardedRef":{"current":null}}
</pre>
`;
